# linera-protocol-fuzzing

./: README.md
PoCs/: crash-05479e93e71aa358db16d8e5b897845ed46eaa3c  crash-0b2f0f647a7c3fdc6845dec3aa988bdfd03b73ad  crash-0fa2da355144e99ea1c40af2d8a3c7853eab4a1b  crash-1188093a39a136d453f8c2e79e7bbbcd52b10367  crash-194b5e09bc13a9d9c80e7829ac12cc105858c077  crash-1f3f246742766c4e98ac6a067c1c85d5c73383ab  crash-1fde5e40e13521831433a134c4882ab7580d810b  crash-414fea6d7164a0a7b46e91dfb44f98e0fb32cf7a  crash-438aa895b5786805f4df223b354a8a47d9b8cb41  crash-538afbff9a5ba4b6dcb736d8655bd38db81dfc26  crash-541ee65901427638e2af3281f3a6936d4f84acce  crash-57a95d023bb21542f46a0a5f03a64bade681bf27  crash-6147d1ed1e22c50de93679adf677ac6a3a223555  crash-62f09f0d4d9bdf629b382fb53983ac9d6d5c0b2a  crash-644c2e62d3d497a9e3e9f29e03a76949d01955fe  crash-65ec367f1cb2b93b7cfa2dd694ec5e120e13627c  crash-6b378de94d53771f910b7ab8900f28d7a7ad01ac  crash-6cec343a49cf27c7f4dd940427a51b7993425c37  crash-85da8ca14b5ded48d2e6b8d935b7762caafe9feb  crash-962763e3dd8a6a6177a9850c8039ed34786015e1  crash-9fef0347ac5360d3439a39a31beac1355a5329e5  crash-e869f7c95d108bedb096731990dd292b8a6be220  crash-fc2f5601f30547a82406b934813891250bd7b6db  crash-ff4e13a58532babf7fadcbef70ba270cfec007b5
grammar-based-fuzz/wasm-domato/: grammar.py
grammar-based-fuzz/wasm-domato/webassembly/: README.md  add_magic_version.sh  commands.sh  generator.py  split.sh  start.txt  template.wat  (+3 more)
linera-protocol/linera-execution/fuzz/: Cargo.toml
linera-protocol/linera-execution/fuzz/fuzz_targets/: cached_contract_module.rs
(+3 files in other folders)
