[package]
name = "linera-execution-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
anyhow = "1.0.57"
async-graphql = "5.0.7"
async-lock = "2.6.0"
async-trait = "=0.1.58"
bcs = "0.1.3"
bytes = "1.2.1"
custom_debug_derive = "0.5.1"
dashmap = "5.4.0"
derive_more = "0.99.17"
futures = "0.3.24"
lru = "0.9.0"
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11.8"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = "1.25.0"
tracing = "0.1.37"
wasm-encoder = "0.24.1"
wasmer = { version = "=3.1.1", features = ["singlepass"] }
wasmer-middlewares = "3.1.1"
wasmparser = "0.101.1"
wasmtime = "1.0"
wit-bindgen-host-wasmer-rust = { version = "0.2.0", package = "linera-wit-bindgen-host-wasmer-rust" }
wit-bindgen-host-wasmtime-rust = { version = "0.2.0", package = "linera-wit-bindgen-host-wasmtime-rust" }

[dependencies.linera-execution]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = true
overflow-checks = true

[profile.dev]
debug = true
overflow-checks = true


[[bin]]
name = "cached_contract_module"
path = "fuzz_targets/cached_contract_module.rs"
test = false
doc = false
